numeração arabica para apendices e anexos
Numeração arábica para apêndices e anexos

--- a/main.tex
+++ b/main.tex
@@ -170,32 +170,34 @@
 \ifthenelse{\equal{\terApendice}{Sim}}
 {\begin{apendicesenv}
 
-% Imprime uma página indicando o início dos apêndices
-% \partapendices
+        % Numeração arábica para os apêndices
+        % --------------------------------------------------
+        \renewcommand{\thechapter}{\arabic{chapter}}
+        % Imprime uma página indicando o início dos apêndices
+        % \partapendices
 
-   % Existem várias formas de se colocar anexos.
-   % O exemplo abaixo coloca 2 apêndices denominados de 
-   % DESENVOLVIMENTO DETALHADO DA PINTURA e 
-   % ESCOLHA DO MATERIAL DE IMPRESSÃO:
-   % ---
-   % --- insere um capítulo que é tratado como um apêndice
-   %\chapter{DESENVOLVIMENTO DETALHADO DA PINTURA}
-   % 
-   %\lipsum[29] % gera um parágrafo
-   %
-   % --- insere um capítulo que é tratado como um apêndice
-   %\chapter{ESCOLHA DO MATERIAL DE IMPRESSÃO}
-   % 
-   %\lipsum[30] % gera um parágrafo
+        % Existem várias formas de se colocar anexos.
+        % O exemplo abaixo coloca 2 apêndices denominados de 
+        % DESENVOLVIMENTO DETALHADO DA PINTURA e 
+        % ESCOLHA DO MATERIAL DE IMPRESSÃO:
+        % ---
+        % --- insere um capítulo que é tratado como um apêndice
+        %\chapter{DESENVOLVIMENTO DETALHADO DA PINTURA}
+        % 
+        %\lipsum[29] % gera um parágrafo
+        %
+        % --- insere um capítulo que é tratado como um apêndice
+        %\chapter{ESCOLHA DO MATERIAL DE IMPRESSÃO}
+        % 
+        %\lipsum[30] % gera um parágrafo
 
+        % --- Insere o texto do arquivo ap01.tex
+        % 
+        % --- O conteúdo do arquivo pode ser vários anexos ou um único apêndices.
+        %     A vantagem de se utilizar este procedimento é de suprimi-lo
+        %     das compilações enquanto se processa o resto do documento.
 
-% --- Insere o texto do arquivo ap01.tex
-% 
-% --- O conteúdo do arquivo pode ser vários anexos ou um único apêndices.
-%     A vantagem de se utilizar este procedimento é de suprimi-lo
-%     das compilações enquanto se processa o resto do documento.
-
-\input{ap01}
+        \input{ap01}
 
 \end{apendicesenv}
 }{}
@@ -206,33 +208,33 @@
 \ifthenelse{\equal{\terAnexo}{Sim}}{
 \begin{anexosenv}
 
-% --- Imprime uma página indicando o início dos anexos
-% \partanexos
+        % Numeração arábica para os apêndices
+        % --------------------------------------------------
+        \renewcommand{\thechapter}{\arabic{chapter}}
+        % --- Imprime uma página indicando o início dos anexos
+        % \partanexos
 
-   % Existem várias formas de se colocar anexos.
-   % O exemplo abaixo coloca 2 anexos denominados de 
-   % TABELA DE VALORES e GRÁFICOS DE BALANCEMANTO:
-   % ---
-   % --- insere um capítulo que é tratado como um anexo
-   %\chapter{TABELAS DE VALORES}
-   % 
-   %\lipsum[31] % gera um parágrafo
-   %
-   % --- insere um capítulo que é tratado como um anexo
-   %\chapter{GRÁFICOS DE BALANCEAMENTO}
-   % 
-   %\lipsum[32] % gera um parágrafo
+        % Existem várias formas de se colocar anexos.
+        % O exemplo abaixo coloca 2 anexos denominados de 
+        % TABELA DE VALORES e GRÁFICOS DE BALANCEMANTO:
+        % ---
+        % --- insere um capítulo que é tratado como um anexo
+        %\chapter{TABELAS DE VALORES}
+        % 
+        %\lipsum[31] % gera um parágrafo
+        %
+        % --- insere um capítulo que é tratado como um anexo
+        %\chapter{GRÁFICOS DE BALANCEAMENTO}
+        % 
+        %\lipsum[32] % gera um parágrafo
 
+        % --- Insere o texto do arquivo ax01.tex
+        % 
+        % --- O conteúdo do arquivo pode ser vários anexos ou um único anexo.
+        %     A vantagem de se utilizar este procedimento é de suprimi-lo
+        %     das compilações enquanto se processa o resto do documento.
 
-% --- Insere o texto do arquivo ax01.tex
-% 
-% --- O conteúdo do arquivo pode ser vários anexos ou um único anexo.
-%     A vantagem de se utilizar este procedimento é de suprimi-lo
-%     das compilações enquanto se processa o resto do documento.
-
- \input{ax01} 
-
-
+         \input{ax01} 
 \end{anexosenv}
 }{}
 
