adjusting parameters order
tabela:    source is the 3th parameter and label the 4th one
figurac :  label is the 7th parameter

--- a/cap01.tex
+++ b/cap01.tex
@@ -42,8 +42,8 @@
   1&2&3&4&5&6\\\hline
  \end{tabular}
 } %2 Tabela
-{teste1} %3 Label da tabela
-{\textcite{ISO5122:1979}}%4 Fonte da tabela
+{\textcite{ISO5122:1979}}%3 Fonte da tabela
+{teste1} %4 Label da tabela tab:teste1
 { Nota de teste } %5 Nota da tabela
 {testando as figuras e tabelas, fda} %6 Legenda da tabela
 
@@ -80,11 +80,12 @@
 {.35} % % da largura da área de texto
 {fig/fig} % localização da figura
 {\textcite{luminaria01}} % fonte da figura
-{tipo3} % etiqueta
+{tipo3} % etiqueta =>  fig:tipo3
 {notinha}   % Nota
+{legendonha} % legenda
 {70} % laterais mm
 {80} % superior e inferior mm
-{legendonha}
+
 
 A \autoref{fig:teste} apresenta o seguinte detalhe que deve ser observado em pacientes com Wordnite
 
