command mistyped in figurac
figurec  \hangindent for legend parameter

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -574,7 +574,7 @@
             {\par \hangindent=14mm NOTA: #6 }
           
             \ifthenelse{\equal{#7}{}}{}
-            {\par hangindent=14mm   LEGENDA: #7 }
+            {\par \hangindent=14mm   LEGENDA: #7 }
         %\end{flushleft}
     \end{minipage}
     \end{figure}
