--- a/ax01.tex
+++ b/ax01.tex
@@ -1,10 +1,10 @@
    % --- insere um capítulo que é tratado como um apêndice
-   \chapter{anexando ESCOLHA DO MATERIAL}
+   \poschap{anexando ESCOLHA DO MATERIAL}
     
    \lipsum[30] % gera um parágrafo
     \section*{anexando testes secao}
     
 
-\chapter{anexando ESCOLHA DO MATERIAL DE IMPRESSÃO}
+\poschap{anexando ESCOLHA DO MATERIAL DE IMPRESSÃO}
     
    \lipsum[32] % gera um parágrafo
