postextual title indentation in toc
postextual title indentation setted to 14.5mm
postextual chapter uppercased

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -97,9 +97,9 @@
 	\markboth{#1}{#1}%
 	\pdfbookmark[2]{#1}{#1}
 	\addtocontents{toc}{\vspace{-0pt}}
-	\addcontentsline{toc}{chapter}{\hspace{11mm}\textbf{\appendixname~
-	\thechapter~- #1}}
-	\chapter*{\appendixname\space\space\thechapter~- #1}%
+	\addcontentsline{toc}{chapter}{\hspace{14.5mm}\textbf{\appendixname~
+	\thechapter~- \uppercase{#1}}}
+	\chapter*{\appendixname\space\space\thechapter~- \uppercase{#1}}%
 	{}
 }
 
