--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -29,13 +29,16 @@
 \usepackage{multicol}		% mescla de colunas em tabelas
 \usepackage{multirow}		% mescla de linhas em tabelas
 \usepackage{newfloat} 		% criação do indice de quadros
-\usepackage{caption} 		% configura legenda 
+%\usepackage{caption} 		% configura legenda 
 	%[format=plain]
 	%\renewcommand\caption[1]{%
-    	\captionsetup{font=small}	% tamanho da fonte 10pt
+    	%\captionsetup{font=small}	% tamanho da fonte 10pt
     	%,format=hang
  	% \caption{#1}}
 	%\captionsetup{width=0.8\textwidth}
+\captiondelim{-- }
+\captiontitlefont{\small}
+\captionnamefont{\small}
 
 % Pacotes de citações BibLaTeX
 % ----------------------------------------------------------
