--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -101,7 +101,7 @@
 	\pdfbookmark[2]{#1}{#1}
 	\addtocontents{toc}{\vspace{-0pt}}
 	\addcontentsline{toc}{chapter}{\hspace{14.5mm}\textbf{\appendixname~
-	\thechapter~- \uppercase{#1}}}
+	\thechapter~- #1}}
 	\chapter*{\appendixname\space\space\thechapter~- \uppercase{#1}}%
 	{}
 }
