--- a/UFPR.sty
+++ b/UFPR.sty
@@ -619,13 +619,13 @@
 \newlength{\myboxlen}
 
 \newcommand{\tabela}[6]
-{\small
+{
   \sbox{\mybox}{#2}
   \settowidth{\myboxlen}{\usebox{\mybox}}
   \noindent
   %\rule{\myboxlen}{1pt}\\
   \begin{table}[!ht]
-    \centering
+    \centering\small
     \par\caption{\uppercase{#1}}
     
     \par  #2
@@ -633,7 +633,7 @@
     \label{tab:#4}
  
      \begin{minipage}{\myboxlen} 
-        \vspace{2mm}
+        \vspace{2mm}\small
         %\begin{flushleft}
             FONTE:~ #3
             
@@ -669,15 +669,15 @@
 
 \newcommand{\qquadro}[6]
   {
-   \small
+   
    %\begin{center}
    \sbox{\myboxq}{#2}
    \settowidth{\myboxlenq}{\usebox{\myboxq}}
-   \begin{quadro} 
+   \begin{quadro} \small
         \caption{\uppercase{#1}}
         \noindent 
         
-        #2 
+        #2 placed inside the environment
    			
         %ajustado p/ a largura da imagem
     	\begin{minipage}{\myboxlenq} \footnotesize
