Etiqueta no apêndice
Para futuras \autoref. Ideia retirada de https://github.com/abntex/abntex2/issues/76.

--- a/ap01.tex
+++ b/ap01.tex
@@ -1,4 +1,5 @@
    % --- insere um capítulo que é tratado como um apêndice
+   \label{ap:ap01}
    \poschap{ESCOLHA DO MATERIAL - colocado no apendice}
     
    \lipsum[30] % gera um parágrafo
