--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -79,7 +79,7 @@
 \DeclareFieldFormat{illustrated}{\addspace #1\isdot}%
 %\DeclareFieldFormat{url}{\bibstring{urlform}\addcolon\addspace<\url{#1}>}%
 %\DeclareFieldFormat{url}{\bibstring{urlfrom}\addcolon\addspace<\url{#1}>}%
-\DeclareFieldFormat{url}{\bibstring{urlfrom}\addcolon \space\addspaceurl{#1}} 
+\DeclareFieldFormat{url}{\bibstring{urlfrom}\addcolon \space\addspace{#1}} 
 % remove <> em urls de acordo com abnt-6023:2018	
 
 % Ajustar o espaço para a formatação da data
