comando para citar fontes em elementos gráficos
comando, citefg, para inserir autor em maiúscula seguido de ano de publicação.

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -113,4 +113,10 @@
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.15}
 
+% Define o comando para citação de fontes em elementos gráficos (figuras, imagens,...).
+%  AUTOR(ano)
+%
+% parâmetro é a bibkey da fonte
+  
+\newcommand{\citefg}[1]{~\citeauthor{#1}(\citeyear{#1})}
 
