--- a/UFPR.sty
+++ b/UFPR.sty
@@ -542,7 +542,7 @@
     \begin{minipage}{#2\textwidth} 
         \vspace{2mm}
         %\begin{flushleft}
-            \par FONTE:~#4
+            \par FONTE:~\citefg{#4}
             \ifthenelse{\equal{#6}{}}{}
             { \par\hangindent=14mm NOTA: #6 }
             
@@ -601,7 +601,7 @@
 			\begin{minipage}{\myboxlena} \footnotesize
 				\vspace{2mm}
 				%\begin{flushleft}
-				\par FONTE:~#3
+				\par FONTE:~\citefg{#3}
 				\ifthenelse{\equal{#5}{}}{}
 				{ \par\hangindent=14mm NOTA: #5 }
 				
@@ -679,7 +679,7 @@
         
         #2 placed inside the environment
    			
-        %ajustado p/ a largura da imagem
+        %ajustado p/ a largura da tabela (quadro)
     	\begin{minipage}{\myboxlenq} \footnotesize
     	    \vspace{2mm}
     		%\begin{flushleft}
