biblatex: repeatfields ajustado para false
repeatfields ajustado para false: evitar repetições de campos nas referências.

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -44,7 +44,7 @@
 % ----------------------------------------------------------
 \usepackage[style=abnt,
 	backref=true,
-	repeatfields=true, 
+	repeatfields=false, 
 	backend=biber,
 	citecounter=true,
 	backrefstyle=three, 
