Ajuste do tamanho da fonte do número de página
usando estilo simplestextual

--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
 % ----------------------------------------------------------
 \textual % \pagestyle{textualUFPR}
 
-\pagestyle{simple}
+\pagestyle{simplestextual}
 % sugerido por Youssef Cherem 20170316
 % https://mail.google.com/mail/u/0/?tab=wm#inbox/15ad3fe6f4e5ff1f
 
