--- a/UFPR.sty
+++ b/UFPR.sty
@@ -150,7 +150,7 @@
     \begin{tikzpicture}[remember picture,overlay] 
     	\node[anchor=south west, yshift= 25mm, xshift=-1.5mm] at 
 		(current page.south west) 
-		{\includegraphics[width = \paperwidth]{fig/capaufpr.jpg}};
+		{\includegraphics[width = \paperwidth]{fig/capaufpr.png}};
     \end{tikzpicture}
     \center
 %    \ABNTEXchapterfont 
