--- a/00-pretextual.tex
+++ b/00-pretextual.tex
@@ -1,4 +1,5 @@
 % ELEMENTOS PRÉ-TEXTUAIS
+\makeoddhead{chapfirst}{}{}{}
 % ----------------------------------------------------------
 % Capa
 % ----------------------------------------------------------
@@ -151,6 +152,7 @@
  }{}
 
 % inserir o sumario
+\makeoddhead{chapfirst}{}{}{}
 % ----------------------------------------------------------
 \ifthenelse{\equal{\terSumario}{Sim}}{
 %\pdfbookmark[0]{\contentsname}{toc}
