alteracao dos parametros do biblatex para imprimir todos os campos de autor na bibliografia sem et al.

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -44,11 +44,18 @@
 % ----------------------------------------------------------
 \usepackage[style=abnt,
 	backref=true,
-	repeatfields=false, 
 	backend=biber,
 	citecounter=true,
 	backrefstyle=three, 
-	url=true]{biblatex}
+	url=true,
+	maxbibnames=99,
+    mincitenames=1,
+    maxcitenames=2,
+    backref=true,
+    hyperref=true,
+    firstinits=true,
+    uniquename=false,
+    uniquelist=false]{biblatex}
 
 % Texto padrão para as referências
 % ----------------------------------------------------------
