Comentários sobre o conteúdo do resumo e palavras-chave
Resumo deve ter no máximo 500 palavras, e as palavras chave separadas por ponto e vírgula.

--- a/00-dados.tex
+++ b/00-dados.tex
@@ -189,11 +189,11 @@ Zootecnia, Universidade de São Paulo, São Paulo, 2011.
 
 % ----------------------------------------------------------
 \newcommand{\ResumoTexto}{%\color{blue}
-Segundo a \textcite[3.1-3.2]{abntex2modelo}, o resumo deve ressaltar o  objetivo, o método, os resultados e as conclusões do documento. A ordem e a extensão destes itens dependem do tipo de resumo (informativo ou indicativo) e do tratamento que cada item recebe no documento original. O resumo deve ser precedido da referência do documento, com exceção do resumo inserido no próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do  resumo, antecedidas da expressão Palavras-chave:, separadas entre si por ponto e finalizadas também por ponto.
-}
+O resumo deve ressaltar o  objetivo, o método, os resultados e as conclusões do documento. A ordem e a extensão destes itens dependem do tipo de resumo (informativo ou indicativo) e do tratamento que cada item recebe no documento original. O resumo deve ser precedido da referência do documento, com exceção do resumo inserido no próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do  resumo, antecedidas da expressão Palavras-chave:, separadas entre si por ponto e finalizadas também por ponto.Ter no máximo 500 palavras!!! As palavras chave são separadas por ponto e vírgula.
+} 
 
 \newcommand{\PalavraschaveTexto}{%\color{blue}
-latex. abntex. editoração de texto.}
+latex; abntex; editoração de texto.}
 
 % ----------------------------------------------------------
 \newcommand{\AbstractTexto}{%\color{blue}
