espaçamento entre entradas das referencias
\setlength\bibitemsep{\baselineskip}
Normalização UFPR de maio 2021

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -56,6 +56,10 @@
     firstinits=true,
     uniquename=false,
     uniquelist=false]{biblatex}
+    
+% Espaçamento entre os itens nas referências (espço de uma linha simples)
+% ----------------------------------------------------------
+\setlength\bibitemsep{\baselineskip}
 
 % Texto padrão para as referências
 % ----------------------------------------------------------
