ajustada a criação de citações para figuras
\citefig{citekey}

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -146,5 +146,5 @@
 %
 % parâmetro é a bibkey da fonte
   
-\newcommand{\citefg}[1]{~\citeauthor{#1}(\citeyear{#1})}
+\newcommand{\citefig}[2]{~\Citeauthor*{#1}\citeyear{#1}}
 
