ajuste do comando qquadro
o comando qquadro utiliza um minipage para colocar as informações (de fonte, legenda e nota) alinhada com a margem esquerda da tabela centralizada na página. Se a largura da minipage tiver de ser ajustada  a uma medida inferior a 30mm, a largura é estabelecidada em .5\linewidth.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -730,9 +730,13 @@
         \noindent 
         
         #2 %placed inside the environment
+	
    			
-        %ajustado p/ a largura da tabela (quadro)
-    	\begin{minipage}{\myboxlenq} \footnotesize
+        %ajustado p/ a largura da tabela (quadro) se menor que 30mm a largura é ajustada para .5\linewidth
+	 
+        \ifdimcomp {\myboxlenq}{<}{30mm}{\settowidth{\myboxlenq}{\hspace{.5\linewidth}}}{}
+    	
+	\begin{minipage}{\myboxlenq} \footnotesize
     	    \vspace{2mm}
     		%\begin{flushleft}
     		\par FONTE:~#3
