Espaçamento corrigido no comando \figura
no comando figura havia o ambiente center que gera um espaçamento na posição de inserção da figura, mesmo esta indo para o topo de outra página. Ambiente center removido e adicionado o comando centering para o ambiente figure

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -546,9 +546,10 @@
 %    7 legenda
 
 \newcommand{\figura}[7]{
- \begin{center}\footnotesize
-    \begin{figure}[!ht]
-    \centering
+  {\centering
+   \footnotesize
+   \begin{figure}[!ht]
+   \centering
         \caption{\uppercase{#1}}
         \includegraphics[width=#2\textwidth]{#3}
         \label{fig:#5}
@@ -566,7 +567,7 @@
         %\end{flushleft}
     \end{minipage}
     \end{figure}
- \end{center}
+    }
 }
 
 
