espaçamento no comando figurac
no comando figura havia o ambiente center que gera um espaçamento na posição de inserção da figura, mesmo esta indo para o topo de outra página. Ambiente center removido e adicionado o comando centering para o ambiente figure. Como o figurac é similar ao comando \figura, a correção foi feita neste comando também.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -585,7 +585,7 @@
 %    9 recorte inferior superior em mm
 
 \newcommand{\figurac}[9]{
- \begin{center}\footnotesize
+ \centering\footnotesize
     \begin{figure}[!ht]
     \centering
         \caption{\uppercase{#1}}
@@ -605,7 +605,7 @@
         %\end{flushleft}
     \end{minipage}
     \end{figure}
- \end{center}
+ }
 }
 
 % simplificação para colocar imagens
