espaçamento no comando \imagem
no comando figura havia o ambiente center que gera um espaçamento na posição de inserção da figura, mesmo esta indo para o topo de outra página. Ambiente center removido e adicionado o comando centering para o ambiente figure. Como o \imagem é similar ao comando \figura, a correção foi feita neste comando também.

--- a/UFPR.sty
+++ b/UFPR.sty
@@ -622,7 +622,8 @@
 \newlength{\myboxlena}
 
 \newcommand{\imagem}[6]{
-	\begin{center}\footnotesize
+	{
+	\centering\footnotesize
   	    \sbox{\myboxa}{#2}
 		\settowidth{\myboxlena}{\usebox{\myboxa}}
 		\noindent
@@ -645,7 +646,7 @@
 				%\end{flushleft}
 			\end{minipage}
 		\end{figure}
-	\end{center}
+	}
 }
 
 % simplificação para colocar tabelas
