--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@
 \renewcommand{\figurename}{FIGURA }
 \renewcommand{\figureautorefname}{FIGURA}
 \renewcommand{\tableautorefname}{TABELA}
-\renewcommand{\equationname}{EQUA\c{C}\~AO~}
+\newcommand{\equationname}{EQUA\c{C}\~AO~}
 \renewcommand{\equationautorefname}{EQUA\c{C}\~AO~}
 
 % Para ajustar o tamanho da fonte do número da primeira página do capítulo
