declaracao dos operadores matematicos em portugues

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -148,3 +148,16 @@
   
 \newcommand{\citefig}[2]{~\Citeauthor*{#1}\citeyear{#1}}
 
+% Define os operadores matemáticos em portugues
+% ----------------------------------------------------------
+%
+
+\DeclareMathOperator{\tr}{tr}
+\DeclareMathOperator{\sen}{sen}
+\DeclareMathOperator{\senh}{senh}
+\DeclareMathOperator{\tag}{tag}
+\DeclareMathOperator{\tg}{tg}
+\DeclareMathOperator{\tagh}{tagh}
+\DeclareMathOperator{\tgh}{tgh}
+\DeclareMathOperator{\cossec}{cossec}
+\DeclareMathOperator{\sen}{sen}
