inseri a key para indicar documento consultado
abntex2modelo-glossario tem a 	key                      = {consulta},

--- a/referencias.bib
+++ b/referencias.bib
@@ -34,11 +34,11 @@
   Author                   = {abnTeX2},
   Organization             = {Equipe abnteX2},
   Year                     = {2013},
-
   Bdsk-url-1               = {http://abntex2.googlecode.com/},
   Date-added               = {2013-03-11 13:38:46 +0000},
   Date-modified            = {2013-04-05 11:03:36 +0000},
-  Url                      = {http://abntex2.googlecode.com/}
+  Url                      = {http://abntex2.googlecode.com/},
+  key                      = {consulta},
 }
 
 @Manual{abntex2modelo-livro,
