Adicionada a relação de FONTES  DE CONSULTA
Estabelecida a relação de documentos de consulta, que devem ser listadas separadamente das obras referenciadas.
Adicionar a key={consulta} nas referencias que são usadas apenas para consulta.

--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,13 @@
 % ----------------------------------------------------------
 %\bibliography{referencias}
 
-\printbibliography[heading=bay]
+\begingroup
+\setstretch{1.0}
+\printbibliography[heading=bay,notkeyword= consulta]
+  
+\printbibliography [keyword= consulta, title = FONTES DE CONSULTA]
+\endgroup
+
 % ----------------------------------------------------------
 
 % Ajuste vertical dos titulos dos capitulos postextuais
