--- a/UFPR.sty
+++ b/UFPR.sty
@@ -556,7 +556,7 @@
     
     %ajustado p/ a largura da imagem
     \begin{minipage}{#2\textwidth} 
-        \vspace{2mm}
+        \vspace{2mm}\centering
         %\begin{flushleft}
             \par FONTE:~#4
             \ifthenelse{\equal{#6}{}}{}
@@ -594,7 +594,7 @@
         
     %ajustado p/ a largura da imagem
     \begin{minipage}{#2\textwidth} 
-        \vspace{2mm}
+        \vspace{2mm}\centering
         %\begin{flushleft}
             \par FONTE:~#4
             \ifthenelse{\equal{#6}{}}{}
@@ -636,7 +636,7 @@
 			
 			%ajustado p/ a largura da imagem
 			\begin{minipage}{\myboxlena} \footnotesize
-				\vspace{2mm}
+				\vspace{2mm}\centering
 				%\begin{flushleft}
 				\par FONTE:~#3
 				\ifthenelse{\equal{#5}{}}{}
@@ -740,7 +740,7 @@
         \ifdimcomp {\myboxlenq}{<}{30mm}{\settowidth{\myboxlenq}{\hspace{.5\linewidth}}}{}
     	
 	\begin{minipage}{\myboxlenq} \footnotesize
-    	    \vspace{2mm}
+    	    \vspace{2mm}\centering
     		%\begin{flushleft}
     		\par FONTE:~#3
     		\ifthenelse{\equal{#5}{}}{}
