tag and sen  commentados
funções já definidas

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -155,9 +155,9 @@
 \DeclareMathOperator{\tr}{tr}
 \DeclareMathOperator{\sen}{sen}
 \DeclareMathOperator{\senh}{senh}
-\DeclareMathOperator{\tag}{tag}
+%\DeclareMathOperator{\tag}{tag}
 \DeclareMathOperator{\tg}{tg}
 \DeclareMathOperator{\tagh}{tagh}
 \DeclareMathOperator{\tgh}{tgh}
 \DeclareMathOperator{\cossec}{cossec}
-\DeclareMathOperator{\sen}{sen}
+%\DeclareMathOperator{\sen}{sen}
